src/test/ui/error-codes/E0271.stderr
error[E0271]: type mismatch resolving `<i8 as Trait>::AssociatedType == u32`
  --> $DIR/E0271.rs:20:5
   |
20 |     foo(3_i8); //~ ERROR E0271
   |     ^^^ expected reference, found u32
   |
   = note: expected type `&'static str`
              found type `u32`
note: required by `foo`
  --> $DIR/E0271.rs:13:1
   |
13 | fn foo<T>(t: T) where T: Trait<AssociatedType=u32> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

